<resources>
    <string name="app_name">My Application</string>
    <string name="field_name">Device Name</string>
    <string name="device_icon">Device Icon</string>
    <string name="more_actions">More actions</string>
    <string name="device_name">Имя устройства</string>
    <string name="device_description">Описание устройства</string>
    <string name="area_name">Имя зоны</string>
    <string name="area_description">Описание зоны</string>
    <string name="area_addition">Area addition</string>
    <string name="create">Создать</string>
    <string name="name_too_short">Имя должно состоять минимум из 3-х символов</string>
    <string name="information">Информация</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="agree">Подтвердить</string>
    <string name="retry">Повторить</string>

    <!-- Dialogs -->
    <string name="dialog_title_remove_confirm">Подтвердите удаление</string>
    <string name="dialog_message_area_remove_confirm">Вы действительно хотите удалить эту зону?</string>
    <string name="area_successful_deleted">Зона успешно удалена</string>
    <string name="area_error_deleted">Произошла ошибка при удалении зоны</string>
    <string name="error_downloading_data">Произошла ошибка при загрузке данных</string>
    <string name="error_creating_area">Произошла ошибка при создании зоны</string>
    <string name="area_successful_created">Зона успешно создана</string>
    <string name="home">Дом</string>
    <string name="area_creation">Создание зоны</string>

    <string name="device_successful_created">Устройство успешно создано</string>
    <string name="device_creation">Создание устройства</string>
    <string name="error_creating_device">Произошла ошибка при создании устройства</string>
    <string name="device_error_deleted">Произошла ошибка при удалении устройства</string>
    <string name="device_successful_deleted">Устройство успешно удалено</string>
    <string name="dialog_message_device_remove_confirm">Вы действительно хотите удалить это устройство?</string>
    <string name="devices">Устройства</string>
    <string name="text_label_signal_inversion">Инверсия сигнала</string>
    <string name="signal_type">Тип сигнала</string>
    <string name="gpio_pin">Пин</string>

</resources>
