<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_device_creation"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_device_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/device_name"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxHeight="54dp"
                android:maxLength="25" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_device_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/device_description"
            android:maxHeight="64dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxHeight="54dp"
                android:maxLength="50" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkbox_device_signal_inversion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:checked="false"
            android:text="@string/text_label_signal_inversion" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:id="@+id/text_input_layout_device_signal_type"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/signal_type">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:id="@+id/text_input_layout_gpio_pin"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/gpio_pin">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_extended_device_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="16dp"
        android:contentDescription="@string/area_addition"
        android:text="@string/create"
        app:icon="@drawable/ic_add_24"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>