<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_weight="1"
    android:elevation="1dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/area_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/device_icon"
                    android:scaleType="centerCrop"
                    android:src="@color/colorPrimary" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/area_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/area"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/headLinesColor"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/description_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/area_description"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/more_btn_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@color/background"
                android:contentDescription="@string/more_actions"
                android:src="@drawable/ic_baseline_more_vert_24" />


        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>